--- a/src/app/playing/playing.component.scss
+++ b/src/app/playing/playing.component.scss
@@ -54,6 +54,8 @@
   background-repeat: round;
   padding: 1px;
   height: 100%;
+  min-width: 1300px;
+  min-height: 653px;
 }
 
 .respuestas h1{
@@ -115,6 +117,8 @@
     height: 300px;
     top: 30%;
     right: 39%;
+    border-color: red;
+    box-shadow: inset 0 0 22px red, 0 0 25px red;
   }
   to {
     position: absolute;
