--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -99,12 +99,17 @@
                     Acepto <a href="#">Terminos y condiciones.</a>
             </div>
             <br/>
-
-            <button 
+            <div *ngIf="loading">
+                <div class="spinner-border text-primary" role="status">
+                    <span class="sr-only"></span>
+                  </div>
+            </div>
+            <div *ngIf="!loading">
+                <button 
                 type="submit" 
                 class="btn btn-primary mb-2"
                 [disabled]="!isChecked">Submit</button>
-            
+            </div>            
           </form>
           
     </div>
