--- a/src/app/register-trivia/register-trivia.component.html
+++ b/src/app/register-trivia/register-trivia.component.html
@@ -12,7 +12,7 @@
     </div>
 
     <p>Agrega tu propio cuestionario de preguntas mediante un archivo excel o un archivo de texto.</p>
-    <p>Para el contenido de los archivos se deben considerar que cada pregunta debe tener 4 respuestas
+    <p>Para el contenido de los archivos se deben considerar que cada pregunta puede tener un maximo de 6 respuestas
         cada una debe de contener su puntuaje, la sumatoria de los puntos debe ser 100 para cada pregunta,
          la distribucion de los puntos para cada pregunta queda a consideracion de cada uno.        
     </p>
